--- a/Business Case.html
+++ b/Business Case.html
@@ -8,13 +8,12 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="scss\petrosmartt.scss">
   <link rel="shortcut icon" href="img/logo-only.png" type="image/x-icon">
   <title>Business Case - Petrolida 2022</title>
 </head>
 
 <body>
-  <section class="hero">
+  <section class="herobisniscase hero">
     <div class="container">
       <div class="hero-title">
         <h1 class="">Business Case</h1>
@@ -39,7 +38,7 @@
           </button>
         </div>
         <div class="col-6">
-          <button class="button" data-bs-toggle="modal" data-bs-target="#feedbackModal">
+          <button class="buttonrgster" data-bs-toggle="modal" data-bs-target="#feedbackModal">
             <span class=" align-items-center">
                 <span class=" align-items-center">Register</span>
             </span>
@@ -283,7 +282,7 @@
   <section class="regist-anounce text-center">
     <h3 class="cc87">Don’t Forget to Register!</h3>
     <p class="cc68">Don’t miss the ultimate opportunity to showcase your ideas and innovation in reinforcing the a future of our energy industry</p>
-    <button class="button" data-bs-toggle="modal" data-bs-target="#feedbackModal">
+    <button class="buttonrgster" data-bs-toggle="modal" data-bs-target="#feedbackModal">
       <span class=" align-items-center">
           <span >Register</span>
       </span>
