--- a/Business Case.html
+++ b/Business Case.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="hero-title">
         <h1 class="">Business Case</h1>
-        <p class="hero-desc body2 cc68">Reinforcing artificial intelligence and machine learning in the logistic industry. Find a solution to a problem real business case paint point.</p>
+        <p class="hero-desc body2 cc68">Capitalizing big data products in the emerging market. Find solutions to a real business case pain point.</p>
       </div>
       <div class="row competition-status cc87">
         <div class="col-7">
@@ -76,9 +76,8 @@
 
   <section class="row about">
     <h3 class="cc87">Know About Competition</h3>
-    <p class="cc68">Business Case Competition is an international competition that primarily focuses on solving real business case paint points that happened in the world. With some advantages for your company such as brand awareness and publication especially in the logistic area, <br><br>
-      
-      we hope that our collaboration in structuring the “case” can engage and inspire youth that has an interest in Business Case Competition.</p>
+    <p class="cc68">The business case competition is a problem-solving competition that focuses on the industry's real-world problems. The participants must emphasize their ideas to solve the problems that the company has. There will be three stages in this competition that include the Preliminary round, Semi-final round, and Final round. The objective of the competition is to find feasible solutions with depth analysis of the problems.
+    </p>
   </section>
 
   <section class="tl">
