--- a/Paper.html
+++ b/Paper.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="hero-title">
         <h1 class="">Paper</h1>
-        <p class="hero-desc body2 cc68">Driving sustanibility in Oil and Gas Industry. Challenge their knowledge to enchance scientific new innovation research</p>
+        <p class="hero-desc body2 cc68">Innovate and present your ideas related to oil and gas in a form of research paper. Topics will be focused mainly on driving the sustainability in the oil and gas industry</p>
       </div>
       <div class="row competition-status cc87">
         <div class="col-7">
@@ -106,7 +106,7 @@
           </div>
           <div class="information">
             <p class="body4 cc68" style="font-weight: normal;">April 3rd 2022</p>
-            <p class="body4 cc87" style="font-weight: 500px;">Abstrack Submission</p>
+            <p class="body4 cc87" style="font-weight: 500px;">Abstract Submission</p>
           </div>
         </div>
         <div class="step">
