--- a/petrosmart.html
+++ b/petrosmart.html
@@ -18,7 +18,7 @@
       <div class="container">
         <div class="hero-title">
           <h1 class="">Petrosmart</h1>
-          <p class="hero-desc body2 cc68">Challenge their knowledge by answering questions covering technical and non-technical aspects of the oil  and gas industry.</p>
+          <p class="hero-desc body2 cc68">Challenge your knowledge related to the oil and gas industry by answering quick-fire questions.</p>
         </div>
         <div class="row competition-status cc87">
           <div class="col-7">
@@ -146,8 +146,8 @@
             <div class="step-icon"><img src="img\technicalmeeting.svg" alt="final"></div>
           </div>
           <div class="information">
-            <p class="body4 cc68" style="font-weight: normal;">May 14st 2022</p>
-            <p class="body4 cc87" style="font-weight: 500px;">Technical Meeting</p>
+            <p class="body4 cc68" style="font-weight: normal;">April 14st 2022</p>
+            <p class="body4 cc87" style="font-weight: 500px;">Online Preliminary</p>
           </div>
         </div>
         <div class="wraperrightdwn"><img src="img\wr1.png"></div>
