--- a/city_tour/index.html
+++ b/city_tour/index.html
@@ -14,9 +14,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-<!-- manual css -->
-<link rel="stylesheet" href="style.css" />
+  <!-- manual css -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -56,6 +55,7 @@
     </div>
   </section>
 
+  <!-- faq -->
   <section id="faq" class="mt-5">
     <div class="container d-md-flex text-white">
       <div class="w-50 faq-kiri">
@@ -68,12 +68,13 @@
       </div>
       <div class="accordion w-50 faq-kanan" id="accordionExample">
         <div class="accordion-item bg-transparent">
-          <h2 class="accordion-header text-white" id="headingOne">
-            <button class="accordion-button bg-transparent shadow-none text-white" type="button"
-              data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              Will the City Tour be held online or offline?
+          <h5 class="accordion-header text-white" id="headingOne">
+            <button class="bg-transparent shadow-none text-white" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              <span>Will the City Tour be held online or offline?</span>
+              <i class="fa-solid fa-chevron-down"></i>
             </button>
-          </h2>
+          </h5>
           <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
             data-bs-parent="#accordionExample">
             <div class="accordion-body fw-light">
@@ -87,6 +88,7 @@
       </div>
     </div>
   </section>
+  <!-- end faq -->
 
   <!-- bundle bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
