add Fracturing Fluid Design

--- a/Fracturing Fluid Design.html
+++ b/Fracturing Fluid Design.html
@@ -7,17 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="scss/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="img/logo-only.png" type="image/x-icon">
-  <title>Business Case - Petrolida 2022</title>
+  <title>Fracturing Fluid Design - Petrolida 2022</title>
 </head>
 
 <body>
-  <section class="herobisniscase hero">
+  <section class="herofracturing hero">
     <div class="container">
       <div class="hero-title">
-        <h1 class="">Business Case</h1>
-        <p class="hero-desc body2 cc68">Capitalizing big data products in the emerging market. Find solutions to a real business case pain point.</p>
+        <h1 class="">Fracturing Fluid Design</h1>
+        <p class="hero-desc body2 cc68">Integrating the capability of fracture fluid to stimulate well productivity by utilizing sustainable ideas and innovation for the future.</p>
       </div>
       <div class="row competition-status cc87">
         <div class="col-7">
@@ -26,7 +26,7 @@
         </div>
         <div class="col-5">
           <p class="cc87">Prize Pool</p>
-          <p class="body5 cc87"><img src="img\emojione-monotone_trophy.svg" alt="Thropy">   IDR 15,000,000</p>
+          <p class="body5 cc87"><img src="img\emojione-monotone_trophy.svg" alt="Thropy">   IDR 6.500,000</p>
         </div>
       </div>
       <div class="row button-info">
@@ -76,7 +76,9 @@
 
   <section class="row about">
     <h3 class="cc87">Know About Competition</h3>
-    <p class="cc68">The business case competition is a problem-solving competition that focuses on the industry's real-world problems. The participants must emphasize their ideas to solve the problems that the company has. There will be three stages in this competition that include the Preliminary round, Semi-final round, and Final round. The objective of the competition is to find feasible solutions with depth analysis of the problems.
+    <p class="cc68">The Fracturing Fluid Design Competition was first held in 2018 and credited with being the pioneer in the region of Pacific Asia. This competition will challenge all delegates to create the optimal capability of fracture fluid related to the given case. <br><br>
+
+      Each team will present their findings directly to the judges and the most  optimal, including performance feasibility, environmental effects, and economic consideration, will have the most points.
     </p>
   </section>
 
@@ -93,7 +95,7 @@
             <div class="step-icon"><img src="img\fold.svg" alt="folder"></div>
           </div>
           <div class="information">
-            <p class="body4 cc68 " style="font-weight: normal;">February 27th - March 26th 2022</p>
+            <p class="body4 cc68 " style="font-weight: normal;">February 27th - March 31st 2022</p>
             <p class="body4 cc87" style="font-weight: 500px;">Open Registration</p>
           </div>
         </div>
@@ -102,19 +104,17 @@
             <div class="step-icon "><img src="img\mail.svg" alt="mail"></div>
           </div>
           <div class="information">
-            <p class="body4 cc68" style="font-weight: normal;">March 1st - March 26th 2022</p>
-            <p class="body4 cc87" style="font-weight: 500px;">Preliminary Round
-              Submission</p>
+            <p class="body4 cc68" style="font-weight: normal;">March 1st 2022</p>
+            <p class="body4 cc87" style="font-weight: 500px;">Case Distribution</p>
           </div>
         </div>
         <div class="step">
           <div class="step-icon-wrap">
-            <div class="step-icon "><img src="img\anounce.svg" alt="anounce"></i></div>
+            <div class="step-icon "><img src="img\document.svg" alt="anounce"></i></div>
           </div>
           <div class="information">
-            <p class="body4 cc68" style="font-weight: normal;">April 6th 2022</p>
-            <p class="body4 cc87" style="font-weight: 500px;">Semi Finalist 
-              Announcement</p>
+            <p class="body4 cc68" style="font-weight: normal;">March 12th 2022 </p>
+            <p class="body4 cc87" style="font-weight: 500px;">Coaching</p>
           </div>
         </div>
         <div class="wraperright "><img src="img\wr1.png"></div>
@@ -123,11 +123,12 @@
         <div class="wraperleft "><img src="img\wr1.png"></div>
         <div class="step olast">
           <div class="step-icon-wrap ">
-            <div class="step-icon olast"><img src="img\technicalmeeting.svg" alt="final"></div>
+            <div class="step-icon olast"><img src="img\file-icons_microsoft-powerpoint.svg" alt="final"></div>
           </div>
           <div class="information">
-            <p class="body4 cc68" style="font-weight: normal;">May 14th 2022</p>
-            <p class="body4 cc87" style="font-weight: 500px;">Technical Meeting</p>
+            <p class="body4 cc68" style="font-weight: normal;">May 12th 2022</p>
+            <p class="body4 cc87" style="font-weight: 500px;">PowerPoint File & Infographic 
+              Submission</p>
           </div>
         </div>
         <div class="step">
@@ -135,7 +136,7 @@
             <div class="step-icon"><img src="img\anounce.svg" alt="final"></div>
           </div>
           <div class="information">
-            <p class="body4 cc68" style="font-weight: normal;">May 8th 2022</p>
+            <p class="body4 cc68" style="font-weight: normal;">April 26th 2022</p>
             <p class="body4 cc87" style="font-weight: 500px;">Finalist Announcement</p>
           </div>
         </div>
@@ -144,8 +145,8 @@
             <div class="step-icon"><img src="img\document.svg" alt="technicalmeeting"></div>
           </div>
           <div class="information">
-            <p class="body4 cc68" style="font-weight: normal;">April 9th - April 23th 2022 </p>
-            <p class="body4 cc87" style="font-weight: 500px;">Semi Final Round
+            <p class="body4 cc68" style="font-weight: normal;">March 31st 2022 </p>
+            <p class="body4 cc87" style="font-weight: 500px;">Preliminary Round<br>
               Submission</p>
           </div>
         </div>
@@ -155,12 +156,11 @@
         <div class="wraperleftdwn "><img src="img\wr1.png"></div>
         <div class="step">
           <div class="step-icon-wrap">
-            <div class="step-icon"><img src="img\document.svg" alt="folder"></div>
+            <div class="step-icon"><img src="img\technicalmeeting.svg" alt="folder"></div>
           </div>
           <div class="information">
-            <p class="body4 cc68 " style="font-weight: normal;">May 14th - May 20th 2022</p>
-            <p class="body4 cc87" style="font-weight: 500px;">Final Round
-              Submission</p>
+            <p class="body4 cc68 " style="font-weight: normal;">May 14th 2022</p>
+            <p class="body4 cc87" style="font-weight: 500px;">Technical Meeting</p>
           </div>
         </div>
         <div class="step">
@@ -168,8 +168,9 @@
             <div class="step-icon "><img src="img\final.svg" alt="mail"></div>
           </div>
           <div class="information">
-            <p class="body4 cc68" style="font-weight: normal;">May 21st 2022</p>
-            <p class="body4 cc87" style="font-weight: 500px;">Final Presentation</p>
+            <p class="body4 cc68" style="font-weight: normal;">May 21th 2022</p>
+            <p class="body4 cc87" style="font-weight: 500px;">Grand Final <br>
+              (Pitch Presentation)</p>
           </div>
         </div>
       </div>
@@ -180,7 +181,7 @@
     <div class="container-sm mx-auto">
       <div class="text-center">
         <h3 class="title cc87">Competition Price</h3>
-        <p class="desc body3 cc68">Winners have a chance to win the prize pool of Rp. 15,000,000, consist of</p>
+        <p class="desc body3 cc68">Winners have a chance to win the prize pool of Rp. 6,500,000, consist of</p>
       </div>
       <div class="price-detail row ">
         <div class="col-xl-6">
@@ -188,7 +189,7 @@
             <img src="img\Gold.svg" alt="testing">
             <div class="col">
               <h6>1st Place</h6>
-              <p class="body2">Rp 7.000.000</p>
+              <p class="body2">Rp 3.000.000</p>
             </div>
           </div>
         </div>
@@ -197,7 +198,7 @@
             <img src="img\Silver.svg" alt="testing">
             <div class="col">
               <h6>2nd Place</h6>
-              <p class="body2">Rp 5.000.000</p>
+              <p class="body2">Rp 2.000.000</p>
             </div>
           </div>
         </div>
@@ -206,7 +207,16 @@
             <img src="img\Bronze.svg" alt="testing">
             <div class="col">
               <h6>3rd Place</h6>
-              <p class="body2">Rp 3.000.000</p>
+              <p class="body2">Rp 1.000.000</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-6">
+          <div class="icon-box">
+            <img src="img\Blue ribbon.svg" alt="testing">
+            <div class="col">
+              <h6>Favorite Winner</h6>
+              <p class="body2">Rp 500.000</p>
             </div>
           </div>
         </div>
@@ -233,7 +243,7 @@
             <div class="accordion-item">
               <h6 class="accordion-header">
                 <button class="accordion-button collapsed" aria-expanded="true" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-1">
-                  What is the theme of this competition?
+                  In what scheme Fracturing Fluid Design Competition 2022 will be held, and how many stages?
                   <span><img src="img\accordion.svg"></span>
                 </button>
               </h6>
@@ -247,7 +257,7 @@
             <div class="accordion-item">
               <h6 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-2">
-                  Can I join as an individually?
+                  What are the regulations to form a team?
                   <span><img src="img\accordion.svg"></span>
                 </button>
               </h6>
@@ -261,7 +271,7 @@
             <div class="accordion-item">
               <h6 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-3">
-                  Can a team member consist of different universities and majors?
+                  Is it necessary for each team to pay in full upfront?
                   <span><img src="img\accordion.svg"></span>
                 </button>
               </h6>
