--- a/Registration.html
+++ b/Registration.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="scss/style.css">
+<link rel="stylesheet" href="css/style.css">
 </head>
 
   <body>
