--- a/home/index.html
+++ b/home/index.html
@@ -81,11 +81,11 @@
 
     <!-- hero -->
     <section id="hero" class="d-flex align-items-center text-center mt-3 mt-md-0 position-relative">
-      <!-- <div class="position-absolute" id="floatingHero1"></div> -->
-      <!-- <div class="position-absolute" id="floatingHero2"></div> -->
+      <div class="position-absolute" id="floatingHero1"></div>
+      <div class="position-absolute" id="floatingHero2"></div>
       <div class="container text-white">
         <h1 class="mb-3 mb-md-5 fw-bold">Utilizing <span class="text-green">sustainable</span> ideas & innovations to reinforce the <span class="text-green">future</span> of <span class="text-green">energy</span> industry</h1>
-        <p class="fw-light mb-5">Explore and disclose innovation regarding today’s energy challenges through providing them a chance to achieve substantial and competitive experiences to advance their excellence.</p>
+        <p class="fw-light mb-5 white2">Explore and disclose innovation regarding today’s energy challenges through providing them a chance to achieve substantial and competitive experiences to advance their excellence.</p>
         <div class="d-md-flex justify-content-center">
           <a href="#" class="d-none d-md-block btn-hero-first">Learn More</a>
           <a href="#" class="d-block btn-hero-second">Register</a>
@@ -97,18 +97,18 @@
 
     <!-- video -->
     <section id="video" class="mt-5 mt-md-0 position-relative">
-      <!-- <div class="position-absolute" id="floatingVideo1"></div> -->
-      <!-- <div class="position-absolute" id="floatingVideo2"></div> -->
+      <div class="position-absolute" id="floatingVideo1"></div>
+      <div class="position-absolute" id="floatingVideo2"></div>
       <div class="container text-white">
         <iframe w src="https://www.youtube.com/embed/zSHrk151CbE" title="YouTube video player" allowfullscreen class="mb-4"></iframe>
-        <p class="text-green mb-3">Know About Petrolida</p>
+        <p class="text-green mb-3 fw-bold">Know About Petrolida</p>
         <div class="d-flex justify-content-between container-content-video">
           <div class="left-video">
             <h2 class="fw-bold">Petroleum<br />Integrated Days</h2>
           </div>
           <div class="right-video">
             <a href="#" class="text-decoration-none text-white" target="_blank">
-              <p class="fw-light mb-3">Petroleum Integrated Days (Petrolida) is the biggest annual event held by SPE ITS Student Chapter. This year’s series will be the 10th annual event.</p>
+              <p class="fw-light mb-3 white2">Petroleum Integrated Days (Petrolida) is the biggest annual event held by SPE ITS Student Chapter. This year’s series will be the 10th annual event.</p>
               <p>Read More <img src="img/long-arrow-right.svg" alt="Icon" /></p>
             </a>
           </div>
@@ -124,7 +124,7 @@
         <div class="header text-center w-50 mx-auto mb-5">
           <p class="text-green">Competitions</p>
           <h2 class="mb-5 fw-bold">7 Competitions Events</h2>
-          <p>Meet other participants, let’s show your ideas, innovations and abilities to Petrolida 2022</p>
+          <p class="white2">Meet other participants, let’s show your ideas, innovations and abilities to Petrolida 2022</p>
         </div>
         <!-- /end header -->
         <!-- content -->
@@ -187,10 +187,10 @@
     <!-- non-competitions -->
     <section id="non-competitions" class="pt-5 mb-5">
       <div class="container text-white pt-5">
-        <p class="text-green mb-3">Non-Competitions</p>
+        <p class="text-green mb-3 fw-bold">Non-Competitions</p>
         <div class="d-flex justify-content-between container-non-competitions mb-5">
-          <h2 class="mb-3">Sharing, Inspiring,<br />Networking</h2>
-          <p>Don’t miss the ultimate opportunity to meet and interact with great speakers on Petrolida Career Talks, explore the city of Surabaya virtually, and Awarding Night.</p>
+          <h2 class="mb-3 fw-bold">Sharing, Inspiring,<br />Networking</h2>
+          <p class="white2">Don’t miss the ultimate opportunity to meet and interact with great speakers on Petrolida Career Talks, explore the city of Surabaya virtually, and Awarding Night.</p>
         </div>
         <!-- carousel -->
         <div class="row slider">
@@ -198,7 +198,7 @@
             <img src="slider/slider_entrepreneurship.png" class="img-fluid" alt="Slider Image" />
             <div class="container-text-item-slider">
               <h4>CV 101 : Nail an Astounding First Impression</h4>
-              <p class="text-secondary">Online</p>
+              <p>Online</p>
               <a href="">See Details <i class="fa-solid fa-chevron-right"></i></a>
             </div>
           </div>
@@ -206,7 +206,7 @@
             <img src="slider/slide_oil_gas.png" class="img-fluid" alt="Slider Image" />
             <div class="container-text-item-slider">
               <h4>Interview 101 : Nail an Astounding First Impression</h4>
-              <p class="text-secondary">Online</p>
+              <p>Online</p>
               <a href="">See Details <i class="fa-solid fa-chevron-right"></i></a>
             </div>
           </div>
@@ -214,7 +214,7 @@
             <img src="slider/slider_technology.png" class="img-fluid" alt="Slider Image" />
             <div class="container-text-item-slider">
               <h4>Career Paths : Nail an Astounding First Impression</h4>
-              <p class="text-secondary">Online</p>
+              <p>Online</p>
               <a href="">See Details <i class="fa-solid fa-chevron-right"></i></a>
             </div>
           </div>
@@ -222,7 +222,7 @@
             <img src="slider/slider_entrepreneurship.png" class="img-fluid" alt="Slider Image" />
             <div class="container-text-item-slider">
               <h4>CV 101 : Nail an Astounding First Impression</h4>
-              <p class="text-secondary">Online</p>
+              <p>Online</p>
               <a href="">See Details <i class="fa-solid fa-chevron-right"></i></a>
             </div>
           </div>
@@ -230,7 +230,7 @@
             <img src="slider/slide_oil_gas.png" class="img-fluid" alt="Slider Image" />
             <div class="container-text-item-slider">
               <h4>Interview 101 : Nail an Astounding First Impression</h4>
-              <p class="text-secondary">Online</p>
+              <p>Online</p>
               <a href="">See Details <i class="fa-solid fa-chevron-right"></i></a>
             </div>
           </div>
@@ -238,7 +238,7 @@
             <img src="slider/slider_technology.png" class="img-fluid" alt="Slider Image" />
             <div class="container-text-item-slider">
               <h4>Career Paths : Nail an Astounding First Impression</h4>
-              <p class="text-secondary">Online</p>
+              <p>Online</p>
               <a href="">See Details <i class="fa-solid fa-chevron-right"></i></a>
             </div>
           </div>
@@ -252,9 +252,9 @@
     <section id="testimonials" class="d-flex align-items-center mt-5">
       <div class="background w-100 p-5">
         <div class="container text-white position-relative">
-          <p class="text-green mb-3">Testimonials</p>
-          <h2 class="mb-3">What They Say<br />About Us</h2>
-          <p>
+          <p class="text-green mb-3 fw-bold">Testimonials</p>
+          <h2 class="mb-3 fw-bold">What They Say<br />About Us</h2>
+          <p class="white2">
             For convincing you who still confused to decide, let's hear<br />
             what they say about journey of being Petrolida's
           </p>
@@ -270,7 +270,7 @@
     <section id="cta">
       <div class="container text-center text-white w-50">
         <h2 class="mb-4 fw-bold">Don't Forget to Register!</h2>
-        <p class="mb-4">Don’t miss the ultimate opportunity to showcase your ideas and innovation in reinforcing the a future of our energy industry</p>
+        <p class="mb-4 white2">Don’t miss the ultimate opportunity to showcase your ideas and innovation in reinforcing the a future of our energy industry</p>
         <button>Register</button>
       </div>
     </section>
@@ -325,14 +325,6 @@
       </div>
     </section>
     <!-- /end sponsors & supporting partners -->
-
-    <!-- footer -->
-    <footer class="pt-5">
-      <div class="container pt-5 text-white">
-        <h1>Footer</h1>
-      </div>
-    </footer>
-    <!-- /end footer -->
 
     <!-- bundle bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
