revisi sponsor jadi bg putih

--- a/home/index.html
+++ b/home/index.html
@@ -271,55 +271,58 @@
       <div class="container text-center text-white w-50">
         <h2 class="mb-4 fw-bold">Don't Forget to Register!</h2>
         <p class="mb-4 white2">Don’t miss the ultimate opportunity to showcase your ideas and innovation in reinforcing the a future of our energy industry</p>
-        <button>Register</button>
+        <button class="mb-5">Register</button>
       </div>
     </section>
     <!-- /end cta -->
 
     <!-- sponsors & supporting partners -->
-    <section id="sponsors" class="pt-5">
-      <div class="container pt-5 text-center text-white">
+    <section id="sponsors" class="pt-2">
+      <div class="container pt-5 text-center">
         <h2 class="mb-5 fw-bold">Sponsors & Supporting Partners</h2>
-        <img src="img/sponsors.svg" alt="Sponsors & Supporting Partners" class="img-fluid mt-3 d-none d-md-block" />
+        <img src="img/sponsors_all.png" alt="Sponsors & Supporting Partners" class="img-fluid mt-3 d-none d-md-block" />
         <div class="row d-md-none">
           <div class="col-6">
-            <img src="img/sponsor-satuan/pertamina.png" alt="Sponsors dan Supporting" />
+            <img src="img/satuan_revisi/pertamina.png" alt="Sponsors dan Supporting" />
           </div>
           <div class="col-6">
-            <img src="img/sponsor-satuan/exxon_mobil.png" alt="Sponsors dan Supporting" />
+            <img src="img/satuan_revisi/exxon.png" alt="Sponsors dan Supporting" />
           </div>
           <div class="col-6">
-            <img src="img/sponsor-satuan/dana.png" alt="Sponsors dan Supporting" />
+            <img src="img/satuan_revisi/dana.png" alt="Sponsors dan Supporting" />
           </div>
           <div class="col-6">
-            <img src="img/sponsor-satuan/pln.png" alt="Sponsors dan Supporting" />
+            <img src="img/satuan_revisi/pln.png" alt="Sponsors dan Supporting" />
           </div>
           <div class="col-6">
-            <img src="img/sponsor-satuan/pertamina_cepu.png" alt="Sponsors dan Supporting" />
+            <img src="img/satuan_revisi/pertamina_cepu.png" alt="Sponsors dan Supporting" />
           </div>
           <div class="col-6">
-            <img src="img/sponsor-satuan/cimb_niaga.png" alt="Sponsors dan Supporting" />
+            <img src="img/satuan_revisi/cimb_niaga.png" alt="Sponsors dan Supporting" />
           </div>
           <div class="col-6">
-            <img src="img/sponsor-satuan/pt_krakatau.png" alt="Sponsors dan Supporting" />
+            <img src="img/satuan_revisi/krakatau.png" alt="Sponsors dan Supporting" />
           </div>
           <div class="col-6">
-            <img src="img/sponsor-satuan/pertamina_phe.png" alt="Sponsors dan Supporting" />
+            <img src="img/satuan_revisi/pertamina_phe.png" alt="Sponsors dan Supporting" />
           </div>
           <div class="col-6">
-            <img src="img/sponsor-satuan/cicil.png" alt="Sponsors dan Supporting" />
+            <img src="img/satuan_revisi/telkom.png" alt="Sponsors dan Supporting" />
           </div>
           <div class="col-6">
-            <img src="img/sponsor-satuan/skkm_migas.png" alt="Sponsors dan Supporting" />
+            <img src="img/satuan_revisi/bigbox.png" alt="Sponsors dan Supporting" />
           </div>
           <div class="col-6">
-            <img src="img/sponsor-satuan/blok_cepu.png" alt="Sponsors dan Supporting" />
+            <img src="img/satuan_revisi/blok_cepu.png" alt="Sponsors dan Supporting" />
           </div>
           <div class="col-6">
-            <img src="img/sponsor-satuan/medco_energi.png" alt="Sponsors dan Supporting" />
+            <img src="img/satuan_revisi/skmigas.png" alt="Sponsors dan Supporting" />
           </div>
           <div class="col-6">
-            <img src="img/sponsor-satuan/bki.png" alt="Sponsors dan Supporting" />
+            <img src="img/satuan_revisi/bki.png" alt="Sponsors dan Supporting" />
+          </div>
+          <div class="col-6">
+            <img src="img/satuan_revisi/medco_energy.png" alt="Sponsors dan Supporting" />
           </div>
         </div>
       </div>
