Update style register & sign-in

--- a/register.html
+++ b/register.html
@@ -23,8 +23,8 @@
                             <p class="text-muted">Getting closer to us, join now!</p>
                             <form action="/route" method="post" enctype="multipart/form-data">
                                 <div class="form-group">
-                                    <label for="email">Your full name</label>
-                                    <input class="form-control" type="text" name="email" placeholder="your name">
+                                    <label for="name">Your full name</label>
+                                    <input class="form-control" type="text" name="name" placeholder="your name">
                                 </div>
                                 <div class="form-group">
                                     <label for="email">Email Addres</label>
@@ -34,12 +34,15 @@
                                     <label for="password">Password</label>
                                     <input class="form-control" type="text" name="password" placeholder="Enter your password">
                                 </div>
-                                <div class="form-check" >
+                                <div class="form-check" style="padding-bottom: 5%;">
                                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                    <label class="form-check-label" for="exampleCheck1" >Remember Password</label>
-                                  </div>
+                                    <label class="form-check-label fb-2" for="exampleCheck1" >I agree to the terms & conditions</label>
+                                </div>
                                 <div class="form-group" style="text-align: center;">
-                                    <input class="btn btn-success" type="submit" value="Sign In" >
+                                    <input class="btn btn-success" type="submit" value="Register Account">
+                                </div>
+                                <div style="text-align: center;">
+                                    <p>Already have an account? Sign In</p>
                                 </div>
                             </form>
                         </div>
