--- a/sign-in.html
+++ b/sign-in.html
@@ -30,7 +30,7 @@
                                     <label for="password">Password</label>
                                     <input class="form-control" type="text" name="password" placeholder="Enter your password">
                                 </div>
-                                <div class="form-check" >
+                                <div class="form-check" style="padding-bottom: 5%;">
                                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
                                     <label class="form-check-label" for="exampleCheck1" >Remember Password</label>
                                   </div>
