Fixing Registration Form

--- a/ordc.html
+++ b/ordc.html
@@ -154,19 +154,19 @@
               <h3 class="form-section h7">Upload your identity</h3>
               <div class="my-3">
                 <label for="leader_file" class="form-label">Team leader*</label>
-                <input required class="form-control" type="file" id="leader_file" name="leader_file" tabindex="20">
+                <input required class="form-control" type="file" id="leader_file" name="leader_file" tabindex="20" accept=".png,.jpg,.jpeg,.pdf">
               </div>
               <div class="my-3">
                 <label for="member1_file" class="form-label">Team member 1*</label>
-                <input required class="form-control" type="file" id="member1_file" name="member1_file" tabindex="21">
+                <input required class="form-control" type="file" id="member1_file" name="member1_file" tabindex="21" accept=".png,.jpg,.jpeg,.pdf">
               </div>
               <div class="my-3">
                 <label for="member2_file" class="form-label">Team member 2*</label>
-                <input required class="form-control" type="file" id="member2_file" name="member2_file" tabindex="22">
+                <input required class="form-control" type="file" id="member2_file" name="member2_file" tabindex="22" accept=".png,.jpg,.jpeg,.pdf">
               </div>
               <div class="my-3">
                 <label for="member3_file" class="form-label">Team member 3*</label>
-                <input required class="form-control" type="file" id="member3_file" name="member3_file" tabindex="23">
+                <input required class="form-control" type="file" id="member3_file" name="member3_file" tabindex="23" accept=".png,.jpg,.jpeg,.pdf">
               </div>
               <div class="my-3">
                 <label for="member4_file" class="form-label">Team member 4</label>
