--- a/paper.html
+++ b/paper.html
@@ -128,15 +128,15 @@
               <h3 class="form-section h7">Upload your identity</h3>
               <div class="my-3">
                 <label for="leader_file" class="form-label">Team leader*</label>
-                <input required class="form-control" type="file" id="leader_file" name="leader_file" tabindex="20">
+                <input required class="form-control" type="file" id="leader_file" name="leader_file" tabindex="20" accept=".png,.jpg,.jpeg,.pdf">
               </div>
               <div class="my-3">
                 <label for="member1_file" class="form-label">Team member 1</label>
-                <input class="form-control" type="file" id="member1_file" name="member1_file" tabindex="21">
+                <input class="form-control" type="file" id="member1_file" name="member1_file" tabindex="21" accept=".png,.jpg,.jpeg,.pdf">
               </div>
               <div class="my-3">
                 <label for="member2_file" class="form-label">Team member 2</label>
-                <input class="form-control" type="file" id="member2_file" name="member2_file" tabindex="22">
+                <input class="form-control" type="file" id="member2_file" name="member2_file" tabindex="22" accept=".png,.jpg,.jpeg,.pdf">
               </div>
               <button type="submit" tabindex="25" class="form-button d-block ms-auto">Complete Submission</button>
             </div>
