--- a/signin.html
+++ b/signin.html
@@ -33,11 +33,11 @@
             <p class="body3 mt-2">Please enter your details</p>
             <div class="my-3">
               <label for="email" class="form-label">Email address</label>
-              <input type="email" class="form-input" id="email" autofocus placeholder="Enter email address">
+              <input type="email" class="form-input" id="email" name="email" autofocus placeholder="Enter email address">
             </div>
             <div class="my-3">
               <label for="password" class="form-label">Password</label>
-              <input type="password" class="form-input" id="password" placeholder="Enter password">
+              <input type="password" class="form-input" id="password" name="password" placeholder="Enter password">
             </div>
             <button type="submit" class="form-button d-block ms-auto w-100">Sign in</button>
             <p class="body2 text-center mt-4">Don't have an account? <a href="" class="form-link">Sign up</a></p>
