--- a/stc.html
+++ b/stc.html
@@ -89,16 +89,16 @@
               <div id="secondForm" style="display: none;">
                 <h3 class="form-section h7">Team Member 1*</h3>
                 <div class="my-3">
-                  <label for="member1_name" class="form-label">Full Name</label>
-                  <input required type="text" class="form-input" id="member1_name" name="member1_name" tabindex="7" placeholder="Enter your full name">
+                  <label for="member_name" class="form-label">Full Name</label>
+                  <input required type="text" class="form-input" id="member_name" name="member_name" tabindex="7" placeholder="Enter your full name">
                 </div>
                 <div class="my-3">
-                  <label for="member1_email" class="form-label">Email</label>
-                  <input required type="email" class="form-input" id="member1_email" name="member1_email" tabindex="8" placeholder="Enter your email">
+                  <label for="member_email" class="form-label">Email</label>
+                  <input required type="email" class="form-input" id="member_email" name="member_email" tabindex="8" placeholder="Enter your email">
                 </div>
                 <div class="my-3">
-                  <label for="member1_phone" class="form-label">Phone Number</label>
-                  <input required type="text" class="form-input" id="member1_phone" name="member1_phone" tabindex="9" placeholder="Enter your phone number">
+                  <label for="member_phone" class="form-label">Phone Number</label>
+                  <input required type="text" class="form-input" id="member_phone" name="member_phone" tabindex="9" placeholder="Enter your phone number">
                 </div>
                 <button type="button" id="secondToDocument" tabindex="19" class="form-button d-block ms-auto">Next Step</button>
               </div>
@@ -115,11 +115,11 @@
               <h3 class="form-section h7">Upload your identity</h3>
               <div class="my-3">
                 <label for="leader_file" class="form-label">Team leader*</label>
-                <input required class="form-control" type="file" id="leader_file" name="leader_file" tabindex="20">
+                <input required class="form-control" type="file" id="leader_file" name="leader_file" tabindex="20" accept=".png,.jpg,.jpeg,.pdf">
               </div>
               <div class="my-3">
-                <label for="member1_file" class="form-label">Team member 1*</label>
-                <input required class="form-control" type="file" id="member1_file" name="member1_file" tabindex="21">
+                <label for="member_file" class="form-label">Team member 1*</label>
+                <input required class="form-control" type="file" id="member_file" name="member_file" tabindex="21" accept=".png,.jpg,.jpeg,.pdf">
               </div>
               <button type="submit" tabindex="25" class="form-button d-block ms-auto">Complete Submission</button>
             </div>
