--- a/signup.html
+++ b/signup.html
@@ -33,15 +33,15 @@
             <p class="body3 mt-2">Getting closer to us, join now!</p>
             <div class="my-3">
               <label for="fullname" class="form-label">Your full name</label>
-              <input type="text" class="form-input" id="fullname" autofocus placeholder="Enter your full name">
+              <input type="text" class="form-input" id="fullname" name="name" autofocus placeholder="Enter your full name">
             </div>
             <div class="my-3">
               <label for="email" class="form-label">Email address</label>
-              <input type="email" class="form-input" id="email" placeholder="Enter email address">
+              <input type="email" class="form-input" id="email" name="email" placeholder="Enter email address">
             </div>
             <div class="my-3">
               <label for="password" class="form-label">Password</label>
-              <input type="password" class="form-input" id="password" placeholder="Enter password">
+              <input type="password" class="form-input" id="password" name="password" placeholder="Enter password">
             </div>
             <div class="my-3">
               <input type="checkbox" id="confirm" class="form-checkbox d-inline-block me-2">
