--- a/reg_cs.html
+++ b/reg_cs.html
@@ -113,7 +113,7 @@
                   <label for="member2_phone" class="form-label">Phone Number</label>
                   <input required type="text" class="form-input" id="member2_phone" name="member2_phone" tabindex="12" placeholder="Enter your phone number">
                 </div>
-                <button type="button" id="secondToDocument" tabindex="19" class="form-button d-block ms-auto">Next Step</button>
+                <button type="button" id="secondToDocument" tabindex="13" class="form-button d-block ms-auto">Next Step</button>
               </div>
               <!-- End of Second Form -->
             </div>
@@ -128,17 +128,17 @@
               <h3 class="form-section h7">Upload your identity</h3>
               <div class="my-3">
                 <label for="leader_file" class="form-label">Team leader*</label>
-                <input required class="form-control" type="file" id="leader_file" name="leader_file" tabindex="20">
+                <input required class="form-control" type="file" id="leader_file" name="leader_file" tabindex="14" accept=".png,.jpg,.jpeg,.pdf">
               </div>
               <div class="my-3">
                 <label for="member1_file" class="form-label">Team member 1*</label>
-                <input required class="form-control" type="file" id="member1_file" name="member1_file" tabindex="21">
+                <input required class="form-control" type="file" id="member1_file" name="member1_file" tabindex="15" accept=".png,.jpg,.jpeg,.pdf">
               </div>
               <div class="my-3">
                 <label for="member2_file" class="form-label">Team member 2*</label>
-                <input required class="form-control" type="file" id="member2_file" name="member2_file" tabindex="22">
+                <input required class="form-control" type="file" id="member2_file" name="member2_file" tabindex="16" accept=".png,.jpg,.jpeg,.pdf">
               </div>
-              <button type="submit" tabindex="25" class="form-button d-block ms-auto">Complete Submission</button>
+              <button type="submit" tabindex="17" class="form-button d-block ms-auto">Complete Submission</button>
             </div>
             <!-- End of Documents Form -->
           </form>
